# confidence-sdk-python

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  OWNERS.md  README.md  catalog-info.yaml  demo.py  generate_proto.py  mypy.ini  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements-minimal.txt  requirements.txt
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: ci.yaml  lint-pr-name.yaml  main.yaml  pull-requests.yaml  release-please.yaml
confidence/: __init__.py  confidence.py  errors.py  flag_types.py  names.py  openfeature_provider.py  provider.py  telemetry.proto  telemetry.py  telemetry_pb2.py
confidence/provider/: provider.py
demo/: demo.py
provider/: provider.py
sdk/: confidence.py  flag_types.py  openfeature_provider.py
spotify_confidence_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_confidence.py  test_logging.py  test_names.py  test_provider.py  test_provider_parametrized.py  test_resources.py  test_telemetry.py
