# pyproject.toml
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confidence_openfeature_provider"
version = "0.1.0"
description = "Confidence provider for the OpenFeature SDK"
readme = "README.md"
authors = [{ name = "Confidence team"}]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = ["requests", "openfeature-sdk"]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "requests_mock"]

[project.urls]
Homepage = "https://github.com/spotify/confidence-openfeature-provider-python"
