# pyproject.toml
[build-system]
requires      = [
    "setuptools>=61.0.0",
    "setuptools_scm[toml]>=7.1.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "confidence/_version.py"
local_scheme = "no-local-version"

[project]
name = "confidence_openfeature_provider"
dynamic = ["version"]
description = "Confidence provider for the OpenFeature SDK"
readme = "README.md"
authors = [{ name = "Confidence team"}]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = ["requests", "openfeature-sdk>=0.3.0"]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "requests_mock"]

[project.urls]
Homepage = "https://github.com/spotify/confidence-openfeature-provider-python"
